# solarx

./: .gitignore  DESIGN.md  IMPLEMENTATION.md  LICENSE  README.md  check.sh  pyproject.toml  solarx_ingestor.py
api/: auth.py  config.py  db.py  main.py  queries.py
deploy/: nginx-solar.conf  setup.sh  solarx-api.service  solarx-rollup.service  solarx-rollup.timer
jobs/: rollup_daily.py
sql/: 01_daily_yield.sql  02_readonly_user.sql
tests/: conftest.py  test_api.py  test_auth.py  test_frontend.py  test_queries.py  test_rollup.py
web/: app.js  index.html  style.css
