[project]
name = "solarx"
version = "0.1.0"
description = "SolaX solar generation dashboard backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pymysql>=1.1",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "pydantic-settings>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
filterwarnings = [
    # Starlette's TestClient still imports httpx; harmless for our use.
    "ignore:Using `httpx` with `starlette.testclient`",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# The standalone ingestor predates this project and runs in production untouched.
extend-exclude = ["solarx_ingestor.py"]

[tool.ruff.lint.isort]
known-first-party = ["api", "jobs", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008: FastAPI's Depends()/Cookie() in argument defaults is the idiomatic pattern.
ignore = ["B008"]
